Temporary fix for crbug/796028

It seems there is an issue with the apply noise functions, however they
are hand optomized ARM assembly, and more digging will be required to
diagnose the true root cause of this issue.

Bug: 796028
Test: Manually
Change-Id: I2babbdfc7c015d2e37c5385b896714d6787ccb0f
Reviewed-on: https://chromium-review.googlesource.com/861244
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>